docs: log Safari baseline metrics and archive captures

--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -18,3 +18,17 @@ Use this file to capture every measurement pass (Safari layers panel, graphics m
 
 Append new sections as work progresses; keep chronological order.
 
+## Baseline — 2025-11-09
+
+- Date / build: 2025-11-09 / `de9819b`
+- Safari version / hardware: Safari (DevTools audit export `Audit.audit` on local Mac — version not recorded)
+- Layer count: 27 (per Layers panel)
+- Graphics memory: ≈ **5.1 GB** total (dominant layers at ~544 MB each ×7, plus several 100 MB range entries)
+- Compositing hot spots:
+  - Seven layers at **544.64 MB** each (likely repeated backing surfaces for the WebGL canvas / DOM blending)
+  - Additional large surfaces at 495.62 MB, 117.97 MB, 104–105 MB, 91.64 MB, 88.16 MB, 87.58 MB, 80.04 MB, 78.88 MB
+  - Highest paint count observed: 17 paints on a 4.66 MB surface; most heavy memory layers show 1–3 paints
+- Notes & screenshots: `docs/perf/2025-11-09-safari-layers/Audit.audit`, `.../Demo Audit.audit`, and the PNG set `Screenshot 2025-11-09 at 02.05.48.png` → `Screenshot 2025-11-09 at 02.06.26.png`
+
+Baseline takeaway: Safari is allocating multiple ~0.5 GB backing layers, pushing composite memory above 5 GB before any optimisations. This confirms the need to clamp DPR, remove duplicate overlays, and reduce full-bleed compositing surfaces.
+
