docs: note pixi stage findings after baseline

--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -32,3 +32,20 @@ Append new sections as work progresses; keep chronological order.
 
 Baseline takeaway: Safari is allocating multiple ~0.5 GB backing layers, pushing composite memory above 5 GB before any optimisations. This confirms the need to clamp DPR, remove duplicate overlays, and reduce full-bleed compositing surfaces.
 
+## Stage Audit — 2025-11-09 (Plan Item 9)
+
+- Current Pixi graph:
+  - `app.stage`  
+    - `ParticleContainer` (GL bubbles)  
+    - `fxRoot` (`PIXI.Container`)  
+      - `overlay` sprite (gradient render texture + `overlayFilter`)  
+      - Errl sprite (primary goo filter)  
+      - `orbContainer` (mirror of DOM nav orbs, optional hue filter)  
+- No filters applied directly to `app.stage`; everything hangs off `fxRoot` or individual sprites (good—avoids stage-wide promotion).
+- Potential hot spots:
+  - `gradientTexture()` regenerates a full-size render texture on every resize; at 1920×1080 this creates another ~8 MB RGBA surface each time. Consider caching/rescaling or reusing a smaller gradient.
+  - Seven ~544 MB backing layers in Safari likely correspond to repeated composited surfaces for the overlay + WebGL canvas + DOM stacking. Reducing DPR and ensuring only one overlay layer should cut these down.
+- Follow-up actions (separate tasks):
+  - Reuse a single overlay render texture or switch to CSS gradient where possible.
+  - Ensure renderer DPR cap is applied before first render (work in progress under plan items 10–12).
+
