docs: draft safari dpr clamp and resize plan

--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -49,3 +49,36 @@ Baseline takeaway: Safari is allocating multiple ~0.5 GB backing layers, pushi
   - Reuse a single overlay render texture or switch to CSS gradient where possible.
   - Ensure renderer DPR cap is applied before first render (work in progress under plan items 10–12).
 
+## DPR Clamp & Resize Guard Plan — 2025-11-09 (Plan Items 10–12)
+
+**Goals**
+- Reduce Safari’s ~544 MB backing layers by lowering the default WebGL renderer DPR on macOS/iOS.
+- Eliminate resize thrash (0×0 canvases during orientation/viewport changes).
+
+**Proposed Implementation**
+
+1. **Default DPR policy**
+   - Detect Safari (`/Safari/` in UA + no `Chrome/`).  
+   - Use `Math.min(1.5, window.devicePixelRatio || 1)` for Safari; keep existing `Math.min(2, devicePixelRatio || 1)` elsewhere.  
+   - Store the chosen cap in `currentResolutionCap` before instantiating Pixi so the first render uses the lower DPR.
+   - Persist the auto-selected cap in `localStorage.errl_debug_dpr_auto` for telemetry (distinct from user overrides).
+
+2. **Runtime override & recovery**
+   - Keep the existing `window.errlGLSetDprCap` pathway (used by `window.errlDebug.setDprCap`).  
+   - When toggling back to “auto”, recompute using the Safari-aware default and apply immediately.  
+   - Log a console message when the cap changes (`[errlGL] resolution set to …`) to assist future audits.
+
+3. **Resize throttling**
+   - Wrap the current `window.addEventListener('resize', onResize)` handler with a RAF throttle:  
+     - On resize, store the latest width/height and, if no RAF is pending, schedule one.  
+     - Inside the RAF callback, bail out if width/height < 2 (Safari sometimes reports 0 during rotation); retry via `setTimeout` 100 ms later.
+   - Reuse a single render texture for the overlay gradient: cache the last texture and call `.resize` when dimensions change instead of regenerating a brand new texture.
+
+4. **DOM canvases**
+   - Ensure CSS width/height remain 100 vw/vh (already enforced) and verify the JS resize handlers don’t set 0×0.  
+   - For Safari-specific behaviour, consider delaying DOM canvas resizes via `setTimeout` 0 to match the Pixi throttling.
+
+**Validation strategy**
+- After implementation, repeat the Safari audit and compare the layer/memory numbers. Target: reduce each large backing layer to ≤200 MB (with the hope of consolidating duplicates), total memory target <2 GB.
+- Keep the debug harness toggles to isolate individual layers when re-testing.
+
