dev: expose fxRoot/mood/overlayFilter to __ErrlWebGL and extend debug toggles (overlayNode, overlayFilter, fxFilter); log measurement in results.md

--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -32,6 +32,40 @@ Append new sections as work progresses; keep chronological order.
 
 Baseline takeaway: Safari is allocating multiple ~0.5 GB backing layers, pushing composite memory above 5 GB before any optimisations. This confirms the need to clamp DPR, remove duplicate overlays, and reduce full-bleed compositing surfaces.
 
+## Measurement — 2025-11-09 (All layers ON, after DPR cap wiring)
+
+Raw top entries (Paints / Memory MB):
+- 2 / 12.08
+- 6 / 10.56
+- 3 / 10.56
+- 3 / 10.56
+- 17 / 4.66
+- 1 / 2.07
+- 3 / 544.64 (x7 layers)
+- 2 / 495.62
+- 1 / 117.97
+- 2 / 104.98
+- 3 / 104.40
+- 3 / 91.64
+- 3 / 88.16
+- 3 / 87.58
+- 3 / 80.04
+- 3 / 78.88
+
+Approx total ≈ 5.1 GB.
+
+Interpretation
+- The seven 544.64 MB layers and the 495.62 MB layer are full-bleed backing stores likely caused by overlapping full-screen elements with filters/blending (GL overlay sprite + DOM vignette + canvases + fxRoot filter).
+- Next step is isolation by toggling sources to determine which combination spawns the extra surfaces.
+
+Action checklist for next run
+1) Toggle GL overlay sprite off: ERRL.toggle.overlayNode(false) → record layer/memory totals
+2) Keep overlay off, toggle DOM vignette off: ERRL.toggle.vignette(false) → record
+3) Re-enable vignette, keep overlay off; then re-enable overlay and disable fxRoot filter: ERRL.toggle.fxFilter(false) → record
+4) Toggle rising canvas off: ERRL.toggle.riseBubbles(false) → record
+
+Paste each result below with “After overlay off”, “After vignette off”, etc., and attach screenshots.
+
 ## Stage Audit — 2025-11-09 (Plan Item 9)
 
 - Current Pixi graph:
