--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -66,6 +66,8 @@ Action checklist for next run
 
 Paste each result below with “After overlay off”, “After vignette off”, etc., and attach screenshots.
 
+> Note: Rising bubbles boot visible now (`#riseBubbles` no longer ship with `display:none`). If they still appear hidden, run `ERRL.toggle.riseBubbles(true)` or clear `localStorage.errl_debug_state_v1`.
+
 ## Stage Audit — 2025-11-09 (Plan Item 9)
 
 - Current Pixi graph:
