perf: clamp safari dpr and throttle resize handlers

--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -118,3 +118,13 @@ Paste each result below with “After overlay off”, “After vignette off”, 
 - After implementation, repeat the Safari audit and compare the layer/memory numbers. Target: reduce each large backing layer to ≤200 MB (with the hope of consolidating duplicates), total memory target <2 GB.
 - Keep the debug harness toggles to isolate individual layers when re-testing.
 
+## Implementation — 2025-11-09 (DPR clamp & resize guards)
+
+- `src/webgl.js`
+  - Auto-computes a Safari-specific DPR cap (1.5) and persists manual overrides with `window.errlGLSetDprCap(null|value)`.
+  - Applies the cap before Pixi init, logs the chosen resolution, and reuses a cached render texture for the overlay gradient.
+  - Adds a RAF-throttled resize handler with minimum-size guards and reuses the gradient texture on resize.
+- `src/rise-bubbles.js`
+  - Matches the Safari DPR cap for the DOM canvas and throttles resize events to avoid 0×0 thrash.
+- Next step: rerun Safari Layers profiling with all toggles “on”, then capture overlay/vignette/bubble permutations per the checklist above.
+
