perf: update tasks queue and add measurement placeholders

--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -68,6 +68,26 @@ Paste each result below with “After overlay off”, “After vignette off”, 
 
 > Note: Rising bubbles boot visible now (`#riseBubbles` no longer ship with `display:none`). If they still appear hidden, run `ERRL.toggle.riseBubbles(true)` or clear `localStorage.errl_debug_state_v1`.
 
+### After overlay off (GL sprite hidden)
+- Layer count: _todo_
+- Graphics memory: _todo_
+- Notes / screenshot: _todo_
+
+### After vignette off (DOM overlay hidden)
+- Layer count: _todo_
+- Graphics memory: _todo_
+- Notes / screenshot: _todo_
+
+### After fxRoot filter disabled (overlay on, vignette on)
+- Layer count: _todo_
+- Graphics memory: _todo_
+- Notes / screenshot: _todo_
+
+### After rising bubbles off (DOM canvas hidden)
+- Layer count: _todo_
+- Graphics memory: _todo_
+- Notes / screenshot: _todo_
+
 ## Stage Audit — 2025-11-09 (Plan Item 9)
 
 - Current Pixi graph:
