perf: drop blend modes from dom glow surfaces

--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -148,3 +148,25 @@ Paste each result below with “After overlay off”, “After vignette off”, 
   - Matches the Safari DPR cap for the DOM canvas and throttles resize events to avoid 0×0 thrash.
 - Next step: rerun Safari Layers profiling with all toggles “on”, then capture overlay/vignette/bubble permutations per the checklist above.
 
+## CSS compositing adjustments — 2025-11-09 (Plan Item 11 progress)
+
+- `src/styles.css`: removed `mix-blend-mode: screen` from `.errl-goo`, `.errl-aura-mask`, and `.errl-pool` (large gradient layers) to keep Safari from allocating duplicate full-screen backings; retuned gradient colors/opacity so the glow still reads against the dark background.
+- Visual QA pending — need Safari layer pass to confirm memory/layer changes.
+
+## Stage Audit — 2025-11-09 (Plan Item 9)
+
+- Current Pixi graph:
+  - `app.stage`  
+    - `ParticleContainer` (GL bubbles)  
+    - `fxRoot` (`PIXI.Container`)  
+      - `overlay` sprite (gradient render texture + `overlayFilter`)  
+      - Errl sprite (primary goo filter)  
+      - `orbContainer` (mirror of DOM nav orbs, optional hue filter)  
+- No filters applied directly to `app.stage`; everything hangs off `fxRoot` or individual sprites (good—avoids stage-wide promotion).
+- Potential hot spots:
+  - `gradientTexture()` regenerates a full-size render texture on every resize; at 1920×1080 this creates another ~8 MB RGBA surface each time. Consider caching/rescaling or reusing a smaller gradient.
+  - Seven ~544 MB backing layers in Safari likely correspond to repeated composited surfaces for the overlay + WebGL canvas + DOM stacking. Reducing DPR and ensuring only one overlay layer should cut these down.
+- Follow-up actions (separate tasks):
+  - Reuse a single overlay render texture or switch to CSS gradient where possible.
+  - Ensure renderer DPR cap is applied before first render (work in progress under plan items 10–12).
+
