perf: replace panel backdrop blur with static gradients

--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -150,7 +150,8 @@ Paste each result below with “After overlay off”, “After vignette off”, 
 
 ## CSS compositing adjustments — 2025-11-09 (Plan Item 11 progress)
 
-- `src/styles.css`: removed `mix-blend-mode: screen` from `.errl-goo`, `.errl-aura-mask`, and `.errl-pool` (large gradient layers) to keep Safari from allocating duplicate full-screen backings; retuned gradient colors/opacity so the glow still reads against the dark background.
+- `src/styles.css`: removed `mix-blend-mode: screen` from `.errl-goo`, `.errl-aura-mask`, and `.errl-pool` (large gradient layers) to keep Safari from allocating duplicate full-screen backings; retuned gradient colors/opacity so the glow still reads against the dark background. Also replaced the control panel (`.errl-panel`) glassmorphism backdrop-filter with an opaque gradient to avoid additional blurs.
+- `src/devpanel/runtime.ts`: mirrored the backdrop-filter removal for the dev panel overlay so debug tooling doesn’t reintroduce accidental blur surfaces when enabled.
 - Visual QA pending — need Safari layer pass to confirm memory/layer changes.
 
 ## Stage Audit — 2025-11-09 (Plan Item 9)
