perf: document pixi stage audit findings

--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -68,25 +68,25 @@ Paste each result below with “After overlay off”, “After vignette off”, 
 
 > Note: Rising bubbles boot visible now (`#riseBubbles` no longer ship with `display:none`). If they still appear hidden, run `ERRL.toggle.riseBubbles(true)` or clear `localStorage.errl_debug_state_v1`.
 
-### After overlay off (GL sprite hidden)
-- Layer count: _todo_
-- Graphics memory: _todo_
-- Notes / screenshot: _todo_
+### Safari Layer Isolation Pass Template
 
-### After vignette off (DOM overlay hidden)
-- Layer count: _todo_
-- Graphics memory: _todo_
-- Notes / screenshot: _todo_
+Use this log for every Safari Layers session so Cursor can paste numbers quickly.  
+All toggles live in the Errl phone console unless noted.
 
-### After fxRoot filter disabled (overlay on, vignette on)
-- Layer count: _todo_
-- Graphics memory: _todo_
-- Notes / screenshot: _todo_
+| Scenario | Toggle Command | Layer Count | Graphics Memory (GB) | Notes / Screenshot |
+| --- | --- | --- | --- | --- |
+| Baseline (all on) | baseline() | _5.1? → update_ | _5.1? → update_ | `docs/perf/2025-11-09-safari-layers/baseline.png` |
+| Overlay sprite off | `ERRL.toggle.overlayNode(false)` | _todo_ | _todo_ | |
+| Vignette off (overlay still off) | `ERRL.toggle.vignette(false)` | _todo_ | _todo_ | |
+| fxRoot filter off (overlay+vignette on, fx filter off) | `ERRL.toggle.fxFilter(false)` | _todo_ | _todo_ | |
+| Rising bubbles off | `ERRL.toggle.riseBubbles(false)` | _todo_ | _todo_ | |
 
-### After rising bubbles off (DOM canvas hidden)
-- Layer count: _todo_
-- Graphics memory: _todo_
-- Notes / screenshot: _todo_
+**Workflow notes**
+1. In Safari DevTools, open Layers → enable “Show Graphics Memory” + “Show Paints”.
+2. Before toggling, copy the “compositing reasons” list to clipboard (helps correlate repeated 544 MB layers).
+3. After each toggle, wait ~5 s for memory counters to settle, then capture a screenshot and export `Audit.audit`.
+4. Paste raw numbers above and drop assets into `docs/perf/2025-11-09-safari-layers/NAME.png` following the table naming.
+5. If any toggle fails (e.g., overlay already hidden), note the console output in the Notes cell and skip to the next step.
 
 ## Stage Audit — 2025-11-09 (Plan Item 9)
 
@@ -98,12 +98,18 @@ Paste each result below with “After overlay off”, “After vignette off”, 
       - Errl sprite (primary goo filter)  
       - `orbContainer` (mirror of DOM nav orbs, optional hue filter)  
 - No filters applied directly to `app.stage`; everything hangs off `fxRoot` or individual sprites (good—avoids stage-wide promotion).
+- Particle container (`ParticleContainer`) remains filter-free; individual burst sprites inherit additive blend but no filters.
+- `fxRoot` holds two filters total:
+  - `overlayFilter` on the gradient sprite (controls noise + pointer ripple)
+  - `moodFilter` on `fxRoot` (color tint/vignette). Removing it would disable the dev-panel mood toggles; safe to keep.
+- `orbContainer` applies a single custom filter per orb (`orbFilter`) for iridescence; leaving as-is since each orb is small (72×72) and reuses the same filter instance.
 - Potential hot spots:
   - `gradientTexture()` regenerates a full-size render texture on every resize; at 1920×1080 this creates another ~8 MB RGBA surface each time. Consider caching/rescaling or reusing a smaller gradient.
   - Seven ~544 MB backing layers in Safari likely correspond to repeated composited surfaces for the overlay + WebGL canvas + DOM stacking. Reducing DPR and ensuring only one overlay layer should cut these down.
 - Follow-up actions (separate tasks):
   - Reuse a single overlay render texture or switch to CSS gradient where possible.
   - Ensure renderer DPR cap is applied before first render (work in progress under plan items 10–12).
+  - Investigate swapping `ParticleContainer` for instanced geometry if Safari continues to allocate large surfaces once other fixes land.
 
 ## DPR Clamp & Resize Guard Plan — 2025-11-09 (Plan Items 10–12)
 
@@ -170,4 +176,3 @@ Paste each result below with “After overlay off”, “After vignette off”, 
 - Follow-up actions (separate tasks):
   - Reuse a single overlay render texture or switch to CSS gradient where possible.
   - Ensure renderer DPR cap is applied before first render (work in progress under plan items 10–12).
-
