docs: prune old safari audit artifacts

--- a/docs/perf/2025-11-09-baseline.md
+++ b/docs/perf/2025-11-09-baseline.md
@@ -4,7 +4,7 @@ This document captures the initial baseline before changes.
 
 - URL: http://localhost:5173/
 - Browser: Safari Web Inspector → Layers (3D), Graphics, Timelines
-- Screenshots: docs/perf/2025-11-09-safari-layers/
+- Screenshots: (cleared 2025-11-11). Add new captures in a fresh dated folder under `docs/perf/` when re-running the audit.
 
 ## Summary
 - Layer Count: ~27
@@ -44,4 +44,4 @@ This document captures the initial baseline before changes.
 - Capture Timelines frame-rate spikes and correlate with layer paints.
 
 ## Attachments
-- See folder: docs/perf/2025-11-09-safari-layers/
+- See folder: (removed). Re-export before next measurement.
