--- a/docs/perf/2025-11-09-results.md
+++ b/docs/perf/2025-11-09-results.md
@@ -3,7 +3,7 @@
 > Created: 2025-11-09  
 > Context: `perf/layer-audit-portal-landing-2025-11-09`
 
-Use this file to capture every measurement pass (Safari layers panel, graphics memory, compositing reasons, FPS notes, screenshots placed in `docs/perf/2025-11-09-safari-layers/`).
+Use this file to capture every measurement pass (Safari layers panel, graphics memory, compositing reasons, FPS notes). Historical screenshots/audits previously stored in `docs/perf/2025-11-09-safari-layers/` have been cleared; stash new captures in a fresh dated folder when you rerun metrics.
 
 ## Baseline Template
 
@@ -28,7 +28,7 @@ Append new sections as work progresses; keep chronological order.
   - Seven layers at **544.64 MB** each (likely repeated backing surfaces for the WebGL canvas / DOM blending)
   - Additional large surfaces at 495.62 MB, 117.97 MB, 104–105 MB, 91.64 MB, 88.16 MB, 87.58 MB, 80.04 MB, 78.88 MB
   - Highest paint count observed: 17 paints on a 4.66 MB surface; most heavy memory layers show 1–3 paints
-- Notes & screenshots: `docs/perf/2025-11-09-safari-layers/Audit.audit`, `.../Demo Audit.audit`, and the PNG set `Screenshot 2025-11-09 at 02.05.48.png` → `Screenshot 2025-11-09 at 02.06.26.png`
+- Notes & screenshots: (cleared 2025-11-11). Re-capture on demand before publishing metrics.
 
 Baseline takeaway: Safari is allocating multiple ~0.5 GB backing layers, pushing composite memory above 5 GB before any optimisations. This confirms the need to clamp DPR, remove duplicate overlays, and reduce full-bleed compositing surfaces.
 
@@ -75,7 +75,7 @@ All toggles live in the Errl phone console unless noted.
 
 | Scenario | Toggle Command | Layer Count | Graphics Memory (GB) | Notes / Screenshot |
 | --- | --- | --- | --- | --- |
-| Baseline (all on) | baseline() | _5.1? → update_ | _5.1? → update_ | `docs/perf/2025-11-09-safari-layers/baseline.png` |
+| Baseline (all on) | baseline() | _5.1? → update_ | _5.1? → update_ | (add new capture path on next run) |
 | Overlay sprite off | `ERRL.toggle.overlayNode(false)` | _todo_ | _todo_ | |
 | Vignette off (overlay still off) | `ERRL.toggle.vignette(false)` | _todo_ | _todo_ | |
 | fxRoot filter off (overlay+vignette on, fx filter off) | `ERRL.toggle.fxFilter(false)` | _todo_ | _todo_ | |
@@ -85,7 +85,7 @@ All toggles live in the Errl phone console unless noted.
 1. In Safari DevTools, open Layers → enable “Show Graphics Memory” + “Show Paints”.
 2. Before toggling, copy the “compositing reasons” list to clipboard (helps correlate repeated 544 MB layers).
 3. After each toggle, wait ~5 s for memory counters to settle, then capture a screenshot and export `Audit.audit`.
-4. Paste raw numbers above and drop assets into `docs/perf/2025-11-09-safari-layers/NAME.png` following the table naming.
+4. Paste raw numbers above and drop assets into a new dated folder under `docs/perf/` (e.g., `docs/perf/2025-11-xx-safari-layers/NAME.png`).
 5. If any toggle fails (e.g., overlay already hidden), note the console output in the Notes cell and skip to the next step.
 
 ## Stage Audit — 2025-11-09 (Plan Item 9)
